master Update portfolio and team sections

--- a/index.html
+++ b/index.html
@@ -620,8 +620,8 @@
             <div class="portfolio-feedback">
                 <div class="wrapper">
                     <span class="title">
-                    Do you like our portfolio?
-                </span>
+                        Do you like our portfolio?
+                    </span>
                     <p class="description">
                         Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vivamus suscipit tortor eget
                         felis porttitor volutpat. Curabitur aliquet quam id dui posuere
@@ -633,9 +633,160 @@
                     </div>
                 </div>
             </div>
+            <div class="portfolio-achievements">
+                <div class="wrapper">
+                    <span class="title">
+                        WE ARE PROUD OF THESE NUMBERS
+                    </span>
+                    <p class="description">
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vivamus suscipit tortor eget
+                        felis porttitor volutpat. Curabitur aliquet quam id dui posuere
+                    </p>
+                    <div class="achievement-list">
+                        <div class="achievement-item col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                            <div class="achievement-holder">
+                                <span class="achievements-item-number">
+                                1600
+                                </span>
+                                <span class="achievement-item-caption">
+                                    Happy Clients
+                                </span>
+                            </div>
+                        </div>
+                        <div class="achievement-item col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                            <div class="achievement-holder">
+                                <span class="achievements-item-number">
+                                    3200
+                                </span>
+                                <span class="achievement-item-caption">
+                                    Completed Projects
+                                </span>
+                            </div>
+                        </div>
+                        <div class="achievement-item col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                            <div class="achievement-holder">
+                                <span class="achievements-item-number">
+                                    40
+                                </span>
+                                <span class="achievement-item-caption">
+                                    Awards
+                                </span>
+                            </div>
+                        </div>
+                        <div class="achievement-item col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                            <div class="achievement-holder">
+                                <span class="achievements-item-number">
+                                    20000
+                                </span>
+                                <span class="achievement-item-caption">
+                                    Coffee Drinks
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <!--portfolio-section-->
+        <!--end portfolio-section-->
+        <!--about section-->
+        <section id="about" class="about-section">
+            <div class="wrapper">
+                <div class="description-container">
+                    <span class="caption">
+                        about us
+                    </span>
+                    <span class="title">
+                        who we are
+                    </span>
+                    <span class="line"></span>
+                    <p class="description">
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere
+                        blandit. Nulla porttitoraccumsan tincidunt. Cras ultricies ligula sed magna dictum porta.
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Praesent sapien massa, convallis a pellen tesque nec, egestas non nisi. Mauris blandit aliquet elit,
+                        eget tincidunt ni dictum porta.
+                    </p>
+                </div>
+                <div class="about-list">
+                    <div class="about-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="about-item-container">
+                            <div class="about-icon-holder">
+                                <i class="fa fa-clock-o" aria-hidden="true"></i>
+                            </div>
+                            <span class="caption">
+                                on time projects
+                            </span>
+                            <p class="description">
+                                Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit
+                                aliquet elit, eget tincidunt ni dictum porta.Cras ultricies ligula sed magna dictum est
+                                ontar des lorem ipsum.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="about-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="about-item-container">
+                            <div class="about-icon-holder">
+                                <i class="fa fa-life-ring" aria-hidden="true"></i>
 
+                            </div>
+                            <span class="caption">
+                                Fully support
+                            </span>
+                            <p class="description">
+                                Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit
+                                aliquet elit, eget tincidunt ni dictum porta.Cras ultricies ligula sed magna dictum est
+                                ontar des lorem ipsum.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="about-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="about-item-container">
+                            <div class="about-icon-holder">
+                                <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <span class="caption">
+                                Professional experience
+                            </span>
+                            <p class="description">
+                                Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit
+                                aliquet elit, eget tincidunt ni dictum porta.Cras ultricies ligula sed magna dictum est
+                                ontar des lorem ipsum.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="about-item col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="about-item-container">
+                            <div class="about-icon-holder">
+                                <i class="fa fa-comments" aria-hidden="true"></i>
+                            </div>
+                            <span class="caption">
+                                Communicative team
+                            </span>
+                            <p class="description">
+                                Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit
+                                aliquet elit, eget tincidunt ni dictum porta.Cras ultricies ligula sed magna dictum est
+                                ontar des lorem ipsum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--end about section-->
+        <!--team section-->
+        <section class="team-section">
+            <div class="description-container">
+                <span class="title">
+                    The Team
+                </span>
+                <p class="description">
+                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                    Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere.
+                </p>
+            </div>
+        </section>
+        <!--end team section-->
         <!--set jquery-->
         <script src="./node_modules/jquery/dist/jquery.min.js"></script>
         <!--set bootstrap-->
