master Update Contact-us and Footer sections

--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
         <!--end about section-->
         <!--team section-->
         <section class="team-section">
-            <div class="description-container">
+            <div class="description-container wrapper">
                 <span class="title">
                     The Team
                 </span>
@@ -787,6 +787,158 @@
             </div>
         </section>
         <!--end team section-->
+        <!--contact-section-->
+        <section id="contact" class="contact-section">
+            <div class="contact-us-container">
+                <div class="wrapper">
+                    <div class="description-container">
+                        <span class="caption">
+                            contact us
+                        </span>
+                        <span class="title">
+                            Where you can find us
+                        </span>
+                        <span class="line"></span>
+                        <p class="description">
+                            Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                            Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere
+                            blandit. Nulla porttitoraccumsan tincidunt. Cras ultricies ligula sed magna dictum porta.
+                            Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                            Praesent sapien massa, convallis a pellen tesque nec, egestas non nisi. Mauris blandit aliquet elit,
+                            eget tincidunt ni dictum porta.
+                        </p>
+                    </div>
+                    <div class="contact-list">
+                        <div class="contact-item-holder col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                            <div class="contact-item">
+                                <div class="contact-icon-holder">
+                                    <i class="fa fa-home" aria-hidden="true"></i>
+                                </div>
+                                <span class="contact-caption">
+                                    Our address
+                                </span>
+                                <span class="contact-info-item">
+                                    214 Awesome Street, NY
+                                </span>
+                            </div>
+                        </div>
+                        <div class="contact-item-holder col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                            <div class="contact-item">
+                                <div class="contact-icon-holder">
+                                    <i class="fa fa-comment" aria-hidden="true"></i>
+                                </div>
+                                <span class="contact-caption">
+                                    Our email
+                                </span>
+                                <a href="mailto:awesomemail@ourmail.com" class="contact-info-item">
+                                    awesomemail@ourmail.com
+                                </a>
+                            </div>
+                        </div>
+                        <div class="contact-item-holder col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                            <div class="contact-item">
+                                <div class="contact-icon-holder">
+                                    <i class="fa fa-phone" aria-hidden="true"></i>
+                                </div>
+                                <span class="contact-caption">
+                                    Our phone
+                                </span>
+                                <a href="tel:(0)123-456-789-00" class="contact-info-item">
+                                    (0)123-456-789-00
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contact-form-info">
+                <div class="description-container wrapper">
+                    <span class="title">
+                        Send us a message
+                    </span>
+                    <p class="description">
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere.
+                    </p>
+                </div>
+                <form action="" id="contact-form" class="contact-user-form  wrapper">
+                    <div class="row">
+                        <div class="form-field-control col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                            <input
+                                id="name"
+                                name="user_name"
+                                class="form-field"
+                                type="text"
+                                placeholder="Your name"
+                            />
+                            <label for="name" class="required-field-control field-control-general">Your name</label>
+                        </div>
+                        <div class="form-field-control col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                            <input
+                                id="email"
+                                name="email"
+                                class="form-field"
+                                type="email"
+                                placeholder="Your email"
+                            />
+                            <label for="email" class="required-field-control field-control-general">Your email</label>
+                        </div>
+                        <div class="from-field-control col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                            <input
+                                id="subject"
+                                name="subject"
+                                class="form-field"
+                                type="text"
+                                placeholder="Subject"
+                            />
+                            <label for="subject" class="field-control-general">Subject</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <textarea id="msg" class="message-field form-field" placeholder="Enter Your message here..."></textarea>
+                        </div>
+                    </div>
+                    <div class="btn-holder">
+                        <button class="send-msg-btn">
+                            <span>Send Message</span>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <!--end contact-section-->
+        <!--footer-section-->
+        <footer class="footer-section">
+            <div class="wrapper">
+                <p class="reserved">
+                    © Copyright 2013 <a href="">Smak</a>. All Rights Reserved.
+                </p>
+                <ul class="social-list">
+                    <li class="social-item">
+                        <a href="">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="">
+                            <i class="fa fa-dribbble" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+        <!--end footer-section-->
         <!--set jquery-->
         <script src="./node_modules/jquery/dist/jquery.min.js"></script>
         <!--set bootstrap-->
