master Update Team, Clients sections

--- a/index.html
+++ b/index.html
@@ -776,17 +776,313 @@
         <!--end about section-->
         <!--team section-->
         <section class="team-section">
-            <div class="description-container wrapper">
-                <span class="title">
-                    The Team
-                </span>
-                <p class="description">
-                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
-                    Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere.
-                </p>
+            <div class="wrapper">
+                <div class="description-container">
+                    <span class="title">
+                        The Team
+                    </span>
+                    <p class="description">
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere.
+                    </p>
+                </div>
+                <div class="team-member-list">
+                    <div data-name="mike_doe" class="team-member col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                        <div class="team-member-container">
+                            <div class="team-member-img-holder">
+                                <img src="./src/images/team1.jpg" alt="creative director">
+                            </div>
+                            <span class="team-member-name">
+                                Mike Doe
+                            </span>
+                            <span class="team-member-post">
+                                creative director
+                            </span>
+                            <span class="angle-up"></span>
+                        </div>
+                    </div>
+                    <div data-name="nick_doe" class="team-member col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                        <div class="team-member-container">
+                            <div class="team-member-img-holder">
+                                <img src="./src/images/team2.jpg" alt="creative director">
+                            </div>
+                            <span class="team-member-name">
+                                Nick Doe
+                            </span>
+                            <span class="team-member-post">
+                                art director
+                            </span>
+                            <span class="angle-up"></span>
+                        </div>
+                    </div>
+                    <div data-name="anthony_doe" class="team-member col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                        <div class="team-member-container">
+                            <div class="team-member-img-holder">
+                                <img src="./src/images/team3.jpg" alt="creative director">
+                            </div>
+                            <span class="team-member-name">
+                                Anthony Doe
+                            </span>
+                            <span class="team-member-post">
+                                web developer
+                            </span>
+                            <span class="angle-up"></span>
+                        </div>
+                    </div>
+                    <div data-name="john_doe" class="team-member col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                        <div class="team-member-container">
+                            <div class="team-member-img-holder">
+                                <img src="./src/images/team4.jpg" alt="creative director">
+                            </div>
+                            <span class="team-member-name">
+                                John Doe
+                            </span>
+                            <span class="team-member-post">
+                                photographer
+                            </span>
+                            <span class="angle-up"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="mike_doe" class="team-member-info-container">
+                <div class="team-member-info">
+                    <span class="member">
+                        Mike Doe
+                    </span>
+                    <span class="close-icon-holder">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                    <p class="description">
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere
+                        blandit. Nulla porttitoraccumsan tincidunt. Cras ultricies ligula sed magna dictum porta.
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Praesent sapien massa, convallis a pellen tesque nec, egestas non nisi. Mauris blandit aliquet elit,
+                        eget tincidunt ni dictum porta.
+                    </p>
+                    <ul class="social-member-list">
+                        <li>
+                            <a href="">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="nick_doe" class="team-member-info-container">
+                <div class="team-member-info">
+                    <span class="member">
+                        Mike Doe
+                    </span>
+                    <span class="close-icon-holder">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                    <p class="description">
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere
+                        blandit. Nulla porttitoraccumsan tincidunt. Cras ultricies ligula sed magna dictum porta.
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Praesent sapien massa, convallis a pellen tesque nec, egestas non nisi. Mauris blandit aliquet elit,
+                        eget tincidunt ni dictum porta.
+                    </p>
+                    <ul class="social-member-list">
+                        <li>
+                            <a href="">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="anthony_doe" class="team-member-info-container">
+                <div class="team-member-info">
+                    <span class="member">
+                        Mike Doe
+                    </span>
+                    <span class="close-icon-holder">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                    <p class="description">
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere
+                        blandit. Nulla porttitoraccumsan tincidunt. Cras ultricies ligula sed magna dictum porta.
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Praesent sapien massa, convallis a pellen tesque nec, egestas non nisi. Mauris blandit aliquet elit,
+                        eget tincidunt ni dictum porta.
+                    </p>
+                    <ul class="social-member-list">
+                        <li>
+                            <a href="">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="john_doe" class="team-member-info-container">
+                <div class="team-member-info">
+                    <span class="member">
+                        Mike Doe
+                    </span>
+                    <span class="close-icon-holder">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                    <p class="description">
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere
+                        blandit. Nulla porttitoraccumsan tincidunt. Cras ultricies ligula sed magna dictum porta.
+                        Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                        Praesent sapien massa, convallis a pellen tesque nec, egestas non nisi. Mauris blandit aliquet elit,
+                        eget tincidunt ni dictum porta.
+                    </p>
+                    <ul class="social-member-list">
+                        <li>
+                            <a href="">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="skills-container">
+                <div class="wrapper">
+                    <div class="description-container">
+                        <span class="title">
+                            The Team
+                        </span>
+                        <p class="description">
+                            Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                            Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <!--end team section-->
+        <!--our-clients-->
+        <section id="clients" class="clients-section">
+            <div class="client-info-container">
+                <div class="wrapper">
+                    <div class="description-container">
+                        <span class="caption">
+                            our clients
+                        </span>
+                        <span class="title">
+                            who love to work with us
+                        </span>
+                        <span class="line"></span>
+                        <p class="description">
+                            Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                            Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere
+                            blandit. Nulla porttitoraccumsan tincidunt. Cras ultricies ligula sed magna dictum porta.
+                            Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
+                            Praesent sapien massa, convallis a pellen tesque nec, egestas non nisi. Mauris blandit aliquet elit,
+                            eget tincidunt ni dictum porta.
+                        </p>
+                    </div>
+                    <div class="client-logo-list">
+                        <div class="client-logo-item">
+                            <img src="./src/images/half-studio.png" alt="half-studio">
+                        </div>
+                        <div class="client-logo-item">
+                            <img src="./src/images/jupiter.png" alt="jupiter">
+                        </div>
+                        <div class="client-logo-item">
+                            <img src="./src/images/rocket.png" alt="rocket">
+                        </div>
+                        <div class="client-logo-item">
+                            <img src="./src/images/moonpic.png" alt="moonpic">
+                        </div>
+                        <div class="client-logo-item">
+                            <img src="./src/images/mars.png" alt="mars">
+                        </div>
+                        <div class="client-logo-item">
+                            <img src="./src/images/half-studio.png" alt="half-studio">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="client-feedback-container">
+                <div class="wrapper">
+                    <div id="carousel-client-feedback" class="carousel carousel-client-feedback slide" data-ride="carousel" data-interval="7000">
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <blockquote class="client-feedback">
+                                    “An image is not simply a trademark, a design, a slogan or an easily
+                                    remembered picture. It is a studiously crafted personality profile of an
+                                    individual, institution,corporation, product or service”
+                                </blockquote>
+                                <span class="line"></span>
+                                <span class="client-name">
+                                    Daniel J. Boorstin
+                                </span>
+                            </div>
+                            <div class="item">
+                                <blockquote class="client-feedback">
+                                    “An image is not simply a trademark, a design, a slogan or an easily
+                                    remembered picture. It is a studiously crafted personality profile of an
+                                    individual, institution,corporation, product or service”
+                                </blockquote>
+                                <span class="line"></span>
+                                <span class="client-name">
+                                    Mark Boorstin
+                                </span>
+                            </div>
+                            <div class="item">
+                                <blockquote class="client-feedback">
+                                    “An image is not simply a trademark, a design, a slogan or an easily
+                                    remembered picture.”
+                                </blockquote>
+                                <span class="line"></span>
+                                <span class="client-name">
+                                    Anthony Boorstin
+                                </span>
+                            </div>
+                            <div class="item">
+                                <blockquote class="client-feedback">
+                                    “It is a studiously crafted personality profile of an
+                                    individual, institution,corporation, product or service”
+                                </blockquote>
+                                <span class="line"></span>
+                                <span class="client-name">
+                                    Mike Boorstin
+                                </span>
+                            </div>
+                        </div>
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators clients-carousel-control">
+                            <li data-target="#carousel-client-feedback" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-client-feedback" data-slide-to="1"></li>
+                            <li data-target="#carousel-client-feedback" data-slide-to="2"></li>
+                            <li data-target="#carousel-client-feedback" data-slide-to="3" class="last-control"></li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--end our-clients-->
         <!--contact-section-->
         <section id="contact" class="contact-section">
             <div class="contact-us-container">
