master Update mobile menu

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
                     <a href="#home" class="logo-holder">
                         <img src="./src/images/full-logo.png" alt="logo" class="logo">
                     </a>
+                    <div class="mob-menu">
+                        <div class="mob-menu-open mob-menu-icon">
+                            <i class="fa fa-bars" aria-hidden="true"></i>
+                        </div>
+                        <div class="mob-menu-close  mob-menu-icon">
+                            <i class="fa fa-times" aria-hidden="true"></i>
+                        </div>
+                    </div>
                     <nav class="menu-holder">
                         <ul class="menu-list">
                             <li>
